PR/21172: Christian Biere: ctype function misuse.