sys/arch/next68k/stand/boot/devopen.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: devopen.c,v 1.3 2005/01/19 01:58:21 chs Exp $	*/
+/*	$NetBSD: devopen.c,v 1.4 2005/04/17 17:18:16 christos Exp $	*/
 /*
  * Copyright (c) 1994 Rolf Grossmann
  * All rights reserved.
@@ -41,7 +41,7 @@ atoi(const char *cp)
 {
     int val = 0;
 
-    while(isdigit(*cp))
+    while(isdigit((unsigned char)*cp))
 	val = val * 10 + (*cp++ - '0');
     return val;
 }
